backend/errors_utf8.txt
C:\Users\mypc\.cargo\bin\cargo.exe :     Checking backend v0.1.0 (C:\Users\mypc\Desktop\saas_house\backend)
At line:1 char:1
+ C:\Users\mypc\.cargo\bin\cargo.exe check 2> errors.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking ba..._house\backend):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error: SQLx feature `bigdecimal` required for type NUMERIC of column #1 ("total")
  --> src\handlers\admin.rs:20:15
   |
20 |       let mrr = sqlx::query!(
   |  _______________^
21 | |         r#"SELECT COALESCE(SUM(billings.amount), 0.0) as total FROM billings WHERE status = 'PAID'"#
22 | |     )
   | |_____^
   |
   = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of 
the macro `sqlx::query` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0432]: unresolved import `crate::utils::admin_middleware`
  --> src\router.rs:16:19
   |
16 | use crate::utils::admin_middleware::require_admin;
   |                   ^^^^^^^^^^^^^^^^ could not find `admin_middleware` in `utils`

error[E0603]: struct `HeaderMap` is private
 --> src\handlers\webhooks.rs:2:22
  |
2 |     extract::{State, HeaderMap},
  |                      ^^^^^^^^^ private struct
  |
note: the struct `HeaderMap` is defined here
 --> C:\Users\mypc\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\axum-0.7.9\src\extract\mod.rs:3:26
  |
3 | use http::header::{self, HeaderMap};
  |                          ^^^^^^^^^
help: import `HeaderMap` directly
  |
2 |     extract::{State, http::header::map::HeaderMap},
  |                      +++++++++++++++++++

warning: unused import: `crate::models::user::User`
 --> src\handlers\admin.rs:5:5
  |
5 | use crate::models::user::User;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `utoipa::ToSchema`
 --> src\utils\error.rs:7:5
  |
7 | use utoipa::ToSchema;
  |     ^^^^^^^^^^^^^^^^

error[E0599]: `()` doesn't implement `std::fmt::Display`
  --> src\handlers\admin.rs:40:40
   |
40 |         total_mrr: mrr.total.map(|d| d.to_string().parse::<f64>().unwrap_or(0.0)).unwrap_or(0.0),
   |                                        ^^^^^^^^^ method cannot be called on `()` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `(): std::fmt::Display`
           which is required by `(): ToString`

error[E0282]: type annotations needed
  --> src\handlers\webhooks.rs:26:20
   |
26 |         .and_then(|h| h.to_str().ok())
   |                    ^  - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
26 |         .and_then(|h: /* Type */| h.to_str().ok())
   |                     ++++++++++++

error[E0599]: no function or associated item named `new_from_slice` found for struct `Hmac<D>` in the current scope
   --> src\handlers\webhooks.rs:113:31
    |
113 |     let mut mac = HmacSha256::new_from_slice(secret.as_bytes())
    |                               ^^^^^^^^^^^^^^ function or associated item not found in `Hmac<Sha256>`
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `KeyInit` which provides `new_from_slice` is implemented but not in scope; perhaps you want to import it
    |
  1 + use hmac::KeyInit;
    |

error[E0277]: the trait bound `fn(State<...>, ..., ...) -> ... {handle_stripe_webhook}: Handler<_, _>` is not satisfied
    --> src\router.rs:71:45
     |
  71 |         .route("/api/webhooks/stripe", post(webhooks::handle_stripe_webhook))
     |                                        ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Handler<_, _>` is not 
implemented for fn item `fn(State<Pool<Postgres>>, ..., ...) -> ... {handle_stripe_webhook}`
     |                                        |
     |                                        required by a bound introduced by this call
     |
     = note: Consider using `#[axum::debug_handler]` to improve the error message
help: the following other types implement trait `Handler<T, S>`
    --> 
C:\Users\mypc\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\axum-0.7.9\src\routing\method_routing.rs:1309:1
     |
1309 | / impl<S> Handler<(), S> for MethodRouter<S>
1310 | | where
1311 | |     S: Clone + 'static,
     | |_______________________^ `MethodRouter<S>` implements `Handler<(), S>`
     |
    ::: C:\Users\mypc\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\axum-0.7.9\src\handler\mod.rs:303:1
     |
 303 | / impl<H, S, T, L> Handler<T, S> for Layered<L, H, T, S>
 304 | | where
 305 | |     L: Layer<HandlerService<H, T, S>> + Clone + Send + 'static,
 306 | |     H: Handler<T, S>,
...    |
 310 | |     T: 'static,
 311 | |     S: 'static,
     | |_______________^ `Layered<L, H, T, S>` implements `Handler<T, S>`
     |
    ::: C:\Users\mypc\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\axum-extra-0.9.6\src\handler\mod.rs:169:1
     |
 169 | / impl<H, T, S> Handler<T, S> for IntoHandler<H, T, S>
 170 | | where
 171 | |     H: HandlerCallWithExtractors<T, S> + Clone + Send + 'static,
 172 | |     T: FromRequest<S> + Send + 'static,
 173 | |     T::Rejection: Send,
 174 | |     S: Send + Sync + 'static,
     | |_____________________________^ `IntoHandler<H, T, S>` implements `Handler<T, S>`
     |
    ::: C:\Users\mypc\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\axum-extra-0.9.6\src\handler\or.rs:55:1
     |
  55 | / impl<S, L, R, Lt, Rt, M> Handler<(M, Lt, Rt), S> for Or<L, R, Lt, Rt, S>
  56 | | where
  57 | |     L: HandlerCallWithExtractors<Lt, S> + Clone + Send + 'static,
  58 | |     R: HandlerCallWithExtractors<Rt, S> + Clone + Send + 'static,
...    |
  62 | |     Rt::Rejection: Send,
  63 | |     S: Send + Sync + 'static,
     | |_____________________________^ `Or<L, R, Lt, Rt, S>` implements `Handler<(M, Lt, Rt), S>`
note: required by a bound in `post`
    --> 
C:\Users\mypc\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\axum-0.7.9\src\routing\method_routing.rs:166:16
     |
 166 |             H: Handler<T, S>,
     |                ^^^^^^^^^^^^^ required by this bound in `post`
...
 443 | top_level_handler_fn!(post, POST);
     | ---------------------------------
     | |                     |
     | |                     required by a bound in this function
     | in this macro invocation
     = note: the full name for the type has been written to 'C:\Users\mypc\Desktop\saas_house\backend\target\debug\deps
\backend-77e07d6202a41034.long-type-17361552587011380642.txt'
     = note: consider using `--verbose` to print the full type name to the console
     = note: this error originates in the macro `top_level_handler_fn` (in Nightly builds, run with -Z macro-backtrace 
for more info)

Some errors have detailed explanations: E0277, E0282, E0432, E0599, E0603.
For more information about an error, try `rustc --explain E0277`.
warning: `backend` (bin "backend") generated 2 warnings
error: could not compile `backend` (bin "backend") due to 8 previous errors; 2 warnings emitted
